Fix wrong height in main view

--- a/gelato/Base.lproj/Main.storyboard
+++ b/gelato/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUICK BITES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWY-Jk-vSR">
-                                                <rect key="frame" x="10" y="619" width="118" height="24"/>
+                                                <rect key="frame" x="10" y="619" width="118.33333333333334" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -48,6 +48,12 @@
                                                     <constraint firstAttribute="height" constant="251" id="1LS-BU-dDT"/>
                                                 </constraints>
                                             </scrollView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BASED ON YOUR LIKES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwV-Xv-7yR">
+                                                <rect key="frame" x="10" y="322" width="212" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <scrollView opaque="NO" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPv-Ih-d1C" customClass="SushiRoll" customModule="gelato" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="54" width="365" height="251"/>
                                                 <constraints>
@@ -59,6 +65,7 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="hPv-Ih-d1C" secondAttribute="trailing" constant="2" id="12g-q1-OEb"/>
                                             <constraint firstAttribute="height" constant="1500" id="9LV-FR-bs8"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="OwV-Xv-7yR" secondAttribute="trailing" id="9gP-vo-x1J"/>
                                             <constraint firstItem="2vd-ND-8A6" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="JuJ-gm-l9r"/>
                                             <constraint firstItem="oGY-wc-tFs" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="15" id="OYl-U5-WwH"/>
                                             <constraint firstAttribute="width" constant="375" id="PC2-J2-fwe"/>
@@ -66,28 +73,22 @@
                                             <constraint firstItem="uJt-jc-0Qd" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="354" id="Rcy-k9-HuA"/>
                                             <constraint firstItem="hPv-Ih-d1C" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="54" id="SZk-aH-lXQ"/>
                                             <constraint firstItem="rWY-Jk-vSR" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="VQt-sz-Rft"/>
-                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rWY-Jk-vSR" secondAttribute="trailing" id="WNW-pP-7IE"/>
                                             <constraint firstAttribute="trailing" secondItem="uJt-jc-0Qd" secondAttribute="trailing" constant="2" id="XhP-rb-J6U"/>
                                             <constraint firstItem="oGY-wc-tFs" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="Zib-uI-AiF"/>
                                             <constraint firstItem="2vd-ND-8A6" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="664" id="cmy-dc-Xng"/>
+                                            <constraint firstItem="OwV-Xv-7yR" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="322" id="jIY-0w-uo0"/>
                                             <constraint firstItem="uJt-jc-0Qd" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="8" id="m2D-JU-Tlc"/>
                                             <constraint firstAttribute="trailing" secondItem="2vd-ND-8A6" secondAttribute="trailing" id="ol7-0w-fWh"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oGY-wc-tFs" secondAttribute="trailing" id="seM-kS-22r"/>
+                                            <constraint firstItem="OwV-Xv-7yR" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="ucZ-b8-dPg"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rWY-Jk-vSR" secondAttribute="trailing" id="w4k-YF-Neo"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BASED ON YOUR LIKES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwV-Xv-7yR">
-                                        <rect key="frame" x="8" y="321" width="212" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="2Om-DV-S2c" firstAttribute="centerX" secondItem="Mtt-wh-Z2j" secondAttribute="centerX" id="A2g-dt-xn1"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="OwV-Xv-7yR" secondAttribute="trailing" id="IWu-Ac-oWc"/>
                                     <constraint firstAttribute="bottom" secondItem="2Om-DV-S2c" secondAttribute="bottom" id="YVM-Ls-z7M"/>
                                     <constraint firstAttribute="trailing" secondItem="2Om-DV-S2c" secondAttribute="trailing" id="Zy5-z4-pic"/>
-                                    <constraint firstItem="OwV-Xv-7yR" firstAttribute="leading" secondItem="Mtt-wh-Z2j" secondAttribute="leading" constant="8" id="gVN-eE-4TW"/>
                                     <constraint firstItem="2Om-DV-S2c" firstAttribute="top" secondItem="Mtt-wh-Z2j" secondAttribute="top" id="xKg-Kk-ZEn"/>
                                 </constraints>
                             </scrollView>
@@ -98,7 +99,6 @@
                             <constraint firstItem="rWY-Jk-vSR" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="619" id="UDX-hJ-BdZ"/>
                             <constraint firstItem="ckN-4f-v8G" firstAttribute="trailing" secondItem="Mtt-wh-Z2j" secondAttribute="trailing" id="ViI-Vz-PBP"/>
                             <constraint firstItem="Mtt-wh-Z2j" firstAttribute="top" secondItem="ckN-4f-v8G" secondAttribute="top" id="g5f-kl-OJr"/>
-                            <constraint firstItem="OwV-Xv-7yR" firstAttribute="top" secondItem="ckN-4f-v8G" secondAttribute="top" constant="321" id="kWK-F9-Ix4"/>
                             <constraint firstItem="ckN-4f-v8G" firstAttribute="bottom" secondItem="Mtt-wh-Z2j" secondAttribute="bottom" id="yGE-VK-Gtl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ckN-4f-v8G"/>
