--- a/gelato/Biscuit.xib
+++ b/gelato/Biscuit.xib
@@ -11,85 +11,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Biscuit" customModule="gelato" customModuleProvider="target">
             <connections>
-                <outlet property="addButton" destination="bSC-SH-KBz" id="aY4-IV-I9E"/>
-                <outlet property="detailLabel" destination="pTs-r1-z6F" id="l7u-Vz-JIQ"/>
-                <outlet property="imageView" destination="oIc-KK-NLg" id="cIa-Ta-EGs"/>
-                <outlet property="nameLabel" destination="BLO-bN-vV0" id="oJr-gZ-qMA"/>
-                <outlet property="priceLabel" destination="12Z-j8-ZsQ" id="zkq-ZY-yyo"/>
+                <outlet property="detailLabel" destination="mwc-td-umW" id="VBU-6S-sGp"/>
+                <outlet property="imageView" destination="znh-YG-82d" id="Agb-OZ-kBR"/>
+                <outlet property="nameLabel" destination="5We-wQ-6aP" id="Gtb-tv-DEi"/>
+                <outlet property="priceLabel" destination="v2o-BI-phg" id="Hf3-p8-K9E"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="215"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Biscuit" translatesAutoresizingMaskIntoConstraints="NO" id="oIc-KK-NLg" userLabel="Image">
-                    <rect key="frame" x="0.0" y="0.0" width="172" height="147"/>
-                    <gestureRecognizers/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="172" id="Y4D-56-rYQ"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beetroot Sandwich" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLO-bN-vV0" userLabel="Name">
-                    <rect key="frame" x="11" y="150" width="140" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fresh beetroot sandwiched in brown bread" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTs-r1-z6F" userLabel="Detail">
-                    <rect key="frame" x="11" y="168" width="156" height="27"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSC-SH-KBz">
-                    <rect key="frame" x="109" y="191" width="58" height="18"/>
-                    <color key="backgroundColor" red="0.35380139946937561" green="0.9044615626335144" blue="0.78859633207321167" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <state key="normal" title="Add"/>
-                    <connections>
-                        <action selector="addBiscuit:" destination="-1" eventType="touchUpInside" id="OeY-fW-Iaz"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12Z-j8-ZsQ">
-                    <rect key="frame" x="11" y="198" width="80" height="13"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="pTs-r1-z6F" secondAttribute="trailing" constant="5" id="1NK-1a-mIH"/>
-                <constraint firstItem="BLO-bN-vV0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="150" id="2rm-oe-M4o"/>
-                <constraint firstAttribute="trailing" secondItem="BLO-bN-vV0" secondAttribute="trailing" constant="21" id="4B7-Xg-K1N"/>
-                <constraint firstItem="bSC-SH-KBz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="109" id="7Dg-H1-JrR"/>
-                <constraint firstItem="pTs-r1-z6F" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="168" id="AHB-KX-9Lf"/>
-                <constraint firstItem="pTs-r1-z6F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="11" id="Es1-BK-2gg"/>
-                <constraint firstItem="oIc-KK-NLg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="JAe-SS-xWB"/>
-                <constraint firstItem="bSC-SH-KBz" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="191" id="JI9-9l-XJp"/>
-                <constraint firstAttribute="bottom" secondItem="BLO-bN-vV0" secondAttribute="bottom" constant="44" id="LHk-im-30K"/>
-                <constraint firstAttribute="bottom" secondItem="bSC-SH-KBz" secondAttribute="bottom" constant="6" id="LbG-nb-cuN"/>
-                <constraint firstAttribute="trailing" secondItem="bSC-SH-KBz" secondAttribute="trailing" constant="5" id="MRP-Jy-Zhl"/>
-                <constraint firstAttribute="trailing" secondItem="oIc-KK-NLg" secondAttribute="trailing" id="Occ-I2-APm"/>
-                <constraint firstAttribute="bottom" secondItem="pTs-r1-z6F" secondAttribute="bottom" constant="20" id="QAe-r4-naC"/>
-                <constraint firstItem="oIc-KK-NLg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SxO-BB-Qq5"/>
-                <constraint firstAttribute="trailing" secondItem="12Z-j8-ZsQ" secondAttribute="trailing" constant="81" id="ah5-n2-hCT"/>
-                <constraint firstItem="BLO-bN-vV0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="11" id="e7k-x0-4w1"/>
-                <constraint firstItem="12Z-j8-ZsQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="11" id="eXi-5C-H3r"/>
-                <constraint firstAttribute="bottom" secondItem="oIc-KK-NLg" secondAttribute="bottom" constant="68" id="jvJ-bP-0Eo"/>
-                <constraint firstItem="12Z-j8-ZsQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="198" id="pYu-Lp-LPO"/>
-                <constraint firstAttribute="bottom" secondItem="12Z-j8-ZsQ" secondAttribute="bottom" constant="4" id="uLF-zK-Gcr"/>
-            </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <nil key="simulatedTopBarMetrics"/>
-            <nil key="simulatedBottomBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outletCollection property="gestureRecognizers" destination="A29-n7-wej" appends="YES" id="BOA-bk-KsO"/>
-            </connections>
-            <point key="canvasLocation" x="60" y="61"/>
-        </view>
         <view contentMode="scaleToFill" id="mHT-Ps-67V">
             <rect key="frame" x="0.0" y="0.0" width="172" height="251"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -147,9 +75,6 @@
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
                     </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="addBiscuit:" destination="-1" eventType="touchUpInside" id="NHc-hB-ZSU"/>
-                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -172,7 +97,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outletCollection property="gestureRecognizers" destination="A29-n7-wej" appends="YES" id="aWa-af-Jcl"/>
+                <outletCollection property="gestureRecognizers" destination="A29-n7-wej" appends="YES" id="mI4-Tr-QAf"/>
             </connections>
             <point key="canvasLocation" x="352" y="61"/>
         </view>
@@ -184,7 +109,6 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="Biscuit" width="150" height="125"/>
         <image name="RIce" width="400" height="492"/>
     </resources>
 </document>
