Add menu bars to main view

--- a/gelato/Base.lproj/Main.storyboard
+++ b/gelato/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6WN-Ia-gUI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6WN-Ia-gUI">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,8 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bYL-9G-d5K">
+                                <rect key="frame" x="0.0" y="88" width="375" height="50"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iPZ-ik-d59" userLabel="Menu View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="375" id="OZr-bf-1PU"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="iPZ-ik-d59" firstAttribute="centerY" secondItem="bYL-9G-d5K" secondAttribute="centerY" id="1TS-ab-XjY"/>
+                                    <constraint firstItem="iPZ-ik-d59" firstAttribute="leading" secondItem="bYL-9G-d5K" secondAttribute="leading" id="GJE-v1-C7c"/>
+                                    <constraint firstAttribute="bottom" secondItem="iPZ-ik-d59" secondAttribute="bottom" id="Oja-UX-ti5"/>
+                                    <constraint firstAttribute="height" constant="50" id="Wom-gD-nKV"/>
+                                    <constraint firstAttribute="trailing" secondItem="iPZ-ik-d59" secondAttribute="trailing" id="wHc-Du-tsr"/>
+                                    <constraint firstItem="iPZ-ik-d59" firstAttribute="top" secondItem="bYL-9G-d5K" secondAttribute="top" id="y2Z-10-SlD"/>
+                                </constraints>
+                            </scrollView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtt-wh-Z2j">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <rect key="frame" x="0.0" y="138" width="375" height="640"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Om-DV-S2c" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1500"/>
@@ -31,7 +50,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUICK BITES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWY-Jk-vSR">
-                                                <rect key="frame" x="10" y="619" width="118.33333333333334" height="24"/>
+                                                <rect key="frame" x="9.9999999999999929" y="619" width="118.33333333333331" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -96,9 +115,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Mtt-wh-Z2j" firstAttribute="leading" secondItem="ckN-4f-v8G" secondAttribute="leading" id="7yR-aa-cQN"/>
+                            <constraint firstItem="ckN-4f-v8G" firstAttribute="trailing" secondItem="bYL-9G-d5K" secondAttribute="trailing" id="DbB-qo-RDJ"/>
+                            <constraint firstItem="bYL-9G-d5K" firstAttribute="top" secondItem="ckN-4f-v8G" secondAttribute="top" id="K3C-HP-BBT"/>
                             <constraint firstItem="rWY-Jk-vSR" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="619" id="UDX-hJ-BdZ"/>
                             <constraint firstItem="ckN-4f-v8G" firstAttribute="trailing" secondItem="Mtt-wh-Z2j" secondAttribute="trailing" id="ViI-Vz-PBP"/>
-                            <constraint firstItem="Mtt-wh-Z2j" firstAttribute="top" secondItem="ckN-4f-v8G" secondAttribute="top" id="g5f-kl-OJr"/>
+                            <constraint firstItem="Mtt-wh-Z2j" firstAttribute="top" secondItem="ckN-4f-v8G" secondAttribute="top" constant="50" id="g5f-kl-OJr"/>
+                            <constraint firstItem="bYL-9G-d5K" firstAttribute="leading" secondItem="ckN-4f-v8G" secondAttribute="leading" id="nw0-3l-6TL"/>
                             <constraint firstItem="ckN-4f-v8G" firstAttribute="bottom" secondItem="Mtt-wh-Z2j" secondAttribute="bottom" id="yGE-VK-Gtl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ckN-4f-v8G"/>
@@ -125,6 +147,8 @@
                     <connections>
                         <outlet property="contentHeightConstraint" destination="9LV-FR-bs8" id="ucx-eQ-gKQ"/>
                         <outlet property="contentView" destination="2Om-DV-S2c" id="rMH-B5-Vv4"/>
+                        <outlet property="menuView" destination="iPZ-ik-d59" id="g3i-Ds-oxg"/>
+                        <outlet property="menuViewWidthConstraint" destination="OZr-bf-1PU" id="CLz-it-4Uq"/>
                         <outlet property="titleItem" destination="4Gu-LG-lWB" id="3pD-19-i2z"/>
                         <segue destination="vEe-XP-Ifa" kind="show" identifier="biscuitToRestaurant" id="Vqp-XR-kRM"/>
                         <segue destination="hND-DZ-6wu" kind="show" identifier="biscuitToRestaurant2" id="cum-mh-Of3"/>
@@ -470,6 +494,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="v3b-g9-Fru"/>
-        <segue reference="pgG-lR-FUV"/>
+        <segue reference="hU6-A4-dO0"/>
     </inferredMetricsTieBreakers>
 </document>
