Implement dummy search bar controller

--- a/gelato/Base.lproj/Main.storyboard
+++ b/gelato/Base.lproj/Main.storyboard
@@ -414,13 +414,42 @@
                     <view key="view" contentMode="scaleToFill" id="Qoj-es-AKd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xJb-DY-kVT">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="idCell" id="ltQ-8V-4Uf">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ltQ-8V-4Uf" id="11s-i8-pWX">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="66B-GI-Ttj" id="vbG-v0-pAa"/>
+                                    <outlet property="delegate" destination="66B-GI-Ttj" id="hX0-Ph-cST"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xJb-DY-kVT" firstAttribute="top" secondItem="s3E-FI-Omb" secondAttribute="top" id="0Is-h5-bBD"/>
+                            <constraint firstItem="s3E-FI-Omb" firstAttribute="trailing" secondItem="xJb-DY-kVT" secondAttribute="trailing" id="Juh-vV-FSR"/>
+                            <constraint firstItem="s3E-FI-Omb" firstAttribute="bottom" secondItem="xJb-DY-kVT" secondAttribute="bottom" id="ru6-Vd-T3O"/>
+                            <constraint firstItem="xJb-DY-kVT" firstAttribute="leading" secondItem="s3E-FI-Omb" secondAttribute="leading" id="sAq-VR-c38"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="s3E-FI-Omb"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="xJb-DY-kVT" id="Vll-Kr-EDj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YxO-O8-SaI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3103" y="-474"/>
+            <point key="canvasLocation" x="3101.5999999999999" y="-474.38423645320199"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qA2-2B-60U">
